refactor: overhaul authentication system and refine code style
- Define TokenClaims, TokenType, and authentication exceptions
- Configure Spring Security for OAuth2 login and token extraction
- Implement AuthenticationCommandService and web adapters
- Refactor User, Post, and Comment domains to adapt to new auth flow
- Update integration and unit tests to reflect architectural changes
- Add mise.toml for environment management
- Update Spotless config: add regex rules for field spacing and unused imports